# TNCG15

./: .gitignore  CMakeLists.txt  README.md
ext/stb/: README.md
ext/stb/tools/: README.list
include/: camera.h  colorDBL.h  colorRGB.h  light.h  material.h  object.h  pixel.h  polygon.h  ray.h  scene.h
include/stb/stb/tests/: image_test.dsp
source/: camera.cpp  camera.h  colorDBL.cpp  light.cpp  main.cpp  material.cpp  object.cpp  pixel.cpp  polygon.cpp  ray.cpp  scene.cpp
